artifacts/promela/tests/ErroneousFiles/ParseErrors/counter.pml
byte count;

active proctype counter()
{
	ifffffffffff
	:: count++
	:: count--
	fi
}
